# ppscore

./: .coveragerc  .gitignore  =  AUTHORS.rst  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  how_to_release.md  requirements.txt  setup.cfg  setup.py  upload_to_pypi.sh
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst
examples/: PPS Model Pipelining.ipynb  ppscore_examples.ipynb  quadrativ_effect_on_1mio_rows.ipynb  quadrativ_effect_on_1mio_rows.py  titanic_dataset.ipynb  titanic_dataset.py
examples/experiments/:  best_naive_predictor_for_f1_score.ipynb   best_naive_predictor_for_f1_score.py
src/ppscore/: __init__.py  analyze.py  calculation.py  skeleton.py
tests/: conftest.py  test_calculation.py  test_skeleton.py
