
[metadata]
name = ppscore
version = 1.3.0
description = Python implementation of the Predictive Power Score (PPS)
author = 8080 Labs, Florian Wetschoreck, Tobias Krabel
author-email = info@8080labs.com
license = mit
url = https://github.com/8080labs/ppscore/
project-urls =
    Documentation = https://github.com/8080labs/ppscore/
long-description = file: README.md
long-description-content-type = text/markdown

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires = numpy; scipy
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
